# luajit-remake

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO_LIST  bench_pretty_format.py  find_missing_constexpr_inline.sh  gen_git_hash.sh  ljfrontend  ljr-build  luajitr-host  main.cpp  run_bench.sh  test_annotation_switch_case.cpp  test_baseline_jit_gen.cpp  test_boxing.cpp  test_call_opcode.cpp  test_deegen_common_snippet_getter.cpp  test_deegen_make_call_api.cpp  test_dfg_frontend.cpp  test_dfg_jit_stencils.cpp  test_dfg_mvp.cpp  test_dfg_reg_alloc_state.cpp  test_dfg_reg_move_inst_generator.cpp  test_dump_type_speculation.cpp  test_global_string_conser.cpp  test_inline_cache_api_lowering.cpp  test_inline_cache_api_parser.cpp  test_interp_function_entry_generator.cpp  test_interpreter.cpp  test_jit_call_inline_cache.cpp  test_jit_memory_allocator.cpp  test_json_bytecode_loader.cpp  test_lambda_capture_parser.cpp  test_lj_optimized_math_lib.cpp  test_llvm_constant_parser.cpp  test_llvm_effectful_function_checker.cpp  test_lua_file_utils.h  test_lua_programs.cpp  (+21 more)
annotated/: CMakeLists.txt
annotated/builtin_libs/: CMakeLists.txt  base_lib.cpp  lib_base.cpp  lib_coroutine.cpp  lib_debug.cpp  lib_io.cpp  lib_math.cpp  lib_os.cpp  lib_package.cpp  lib_string.cpp  lib_table.cpp  lib_util.h  throw_error.cpp
annotated/bytecodes/: CMakeLists.txt  arithmetic_bytecodes.cpp  bytecode_mov.cpp  call_bytecodes.cpp  comparison_bytecodes.cpp  concat.cpp  equality_bytecodes.cpp  global_get.cpp  global_put.cpp  iterative_for_loop.cpp  iterative_for_loop_kv.cpp  length_operator.cpp  logical_not.cpp  new_closure.cpp  numeric_for_loop.cpp  range_fill_nils.cpp  return_bytecodes.cpp  set_constant_value.cpp  table_dup.cpp  table_get_by_id.cpp  table_get_by_imm.cpp  table_get_by_val.cpp  table_new.cpp  table_put_by_id.cpp  table_put_by_imm.cpp  table_put_by_val.cpp  table_variadic_put_by_seq.cpp  tail_call_bytecodes.cpp  test_and_branch_bytecodes.cpp  typecheck_impl_info.cpp  unary_minus.cpp  unconditional_branch.cpp  upvalue_bytecodes.cpp  variadic_args_accessor.cpp
annotated/deegen_common_snippets/: CMakeLists.txt  append_variadic_results_to_function_returns.cpp  apply_dfg_runtime_reg_patch_data.cpp  apply_dfg_runtime_reg_patch_using_slow_path_data_reg_config.cpp  box_function_object_heap_ptr_to_tvalue.cpp  box_function_object_raw_pointer_to_tvalue.cpp  box_function_object_to_tvalue.cpp  check_is_tvalue_heap_entity.cpp  close_upvalues.cpp  copy_variadic_results_to_arguments.cpp  copy_variadic_results_to_arguments_for_variadic_notinplace_tailcall.cpp  copy_variadic_results_to_arguments_forward.cpp  create_closed_upvalue.cpp  create_new_closure_for_dfg_and_fill_upvalues_from_parent.cpp  create_new_closure_from_code_block.cpp  create_new_jit_call_ic_for_closure_call_mode_site.cpp  create_new_jit_call_ic_for_direct_call_mode_site.cpp  create_new_jit_generic_ic.cpp  create_new_jit_generic_ic_for_baseline_jit.cpp  create_new_jit_generic_ic_for_dfg_jit.cpp  deegen_common_snippet_ir_accessor.h  define_deegen_common_snippet.h  fixup_stack_frame_for_variadic_arg_function.cpp  get_baseline_codeblock_from_stack_base.cpp  get_baseline_jit_codeblock_from_codeblock.cpp  get_baseline_jit_codeblock_from_codeblock_heap_ptr.cpp  get_baseline_jit_slowpath_data_after_slow_call.cpp  (+88 more)
deegen/: CMakeLists.txt  anonymous_file.h  api_define_bytecode.h  api_define_lib_function.h  api_inline_cache.h  api_preserve_lambda_helper.h  base64_util.cpp  base64_util.h  bytecode_builder.h  bytecode_builder_utils.h  bytecode_definition_utils.h  check_file_md5.h  cxx_symbol_demangler.h  deegen_analyze_lambda_capture_pass.cpp  deegen_analyze_lambda_capture_pass.h  deegen_analyze_read_locations.cpp  deegen_analyze_read_locations.h  deegen_api.h  deegen_ast_get_global_object.cpp  deegen_ast_get_output_slot.cpp  deegen_ast_guest_language_funtion_return.cpp  deegen_ast_inline_cache.cpp  deegen_ast_inline_cache.h  deegen_ast_make_call.cpp  deegen_ast_make_call.h  deegen_ast_new_closure.cpp  deegen_ast_return.cpp  deegen_ast_return.h  deegen_ast_return_value_accessor.cpp  deegen_ast_return_value_accessor.h  deegen_ast_simple_lowering_utils.cpp  deegen_ast_simple_lowering_utils.h  deegen_ast_slow_path.cpp  deegen_ast_slow_path.h  deegen_ast_throw_error.cpp  deegen_ast_throw_error.h  deegen_ast_upvalue_accessor.cpp  deegen_ast_variadic_args_accessor.cpp  deegen_ast_variadic_results_accessor.cpp  deegen_ast_vm_base_pointer.cpp  (+149 more)
drt/: CMakeLists.txt  baseline_jit_codegen_helper.cpp  baseline_jit_codegen_helper.h  bit_vector_utils.h  bitmap_adjacency_graph.h  bytecode_builder.cpp  bytecode_builder.h  bytecode_builder_utils.h  bytecode_intrinsic_info.h  bytecode_rwc_info.h  constexpr_array_builder_helper.h  deegen_enter_vm_from_c.h  deegen_internal_dfg_c_wrapper_shared_stub.s  deegen_internal_enter_exit_vm.s  deegen_metadata_accessor.h  dfg_arena.cpp  dfg_arena.h  dfg_backend.cpp  dfg_backend.h  dfg_basic_block_builder.cpp  dfg_basic_block_builder.h  dfg_builtin_nodes.h  dfg_bytecode_liveness.cpp  dfg_bytecode_liveness.h  dfg_bytecode_speculative_inlining_trait.h  dfg_code_origin.h  dfg_codegen_operation_base.h  dfg_codegen_operation_log.h  dfg_codegen_operations.h  dfg_codegen_protocol.h  dfg_codegen_register_ops.h  dfg_codegen_register_renamer.cpp  dfg_codegen_register_renamer.h  dfg_construct_block_local_ssa.cpp  dfg_construct_block_local_ssa.h  dfg_control_flow_and_upvalue_analysis.cpp  dfg_control_flow_and_upvalue_analysis.h  dfg_edge_use_kind.h  dfg_frontend.cpp  dfg_frontend.h  (+62 more)
runtime/: CMakeLists.txt  array_type.h  butterfly.h  init_global_object.cpp  legacy_json_bc_dump_parser.cpp  lj_bytecode_parser.cpp  lj_char_trait_details.h  lj_lex.cpp  lj_lex_details.h  lj_parse.cpp  lj_parse_details.h  lj_parser_wrapper.h  lj_strfmt.cpp  lj_strfmt_details.h  lj_strfmt_num.cpp  lj_strfmt_num.h  lj_strscan.cpp  lj_strscan.h  lualib_tonumber_util.h  math_fast_pow.cpp  runtime_utils.cpp  runtime_utils.h  spds_doubly_linked_list.h  structure.h  table_object.h  vm.cpp  vm.h  watchpoint.cpp  watchpoint.h  watchpoint.hpp
(+861 files in other folders)
